--- a/my-cafe/package.json
+++ b/my-cafe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-vue",
+  "name": "my-cafe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -21,6 +18,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
